Add homework 4 notebook

--- a/hwk4-task2-false-color-POUDEL.ipynb
+++ b/hwk4-task2-false-color-POUDEL.ipynb
@@ -1,12 +1,83 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "405d8a53-264f-44e1-b1d6-1b959a66978b",
+   "cell_type": "markdown",
+   "id": "7b366594-734a-4373-9fd6-d74a791e8b5b",
    "metadata": {},
+   "source": [
+    "# Task 2: Visualizing fire scars through false color\n",
+    "\n",
+    "## Instructions\n",
+    "\n",
+    "- First, update the following cell to have a link to Homework 4 GitHub repository:\n",
+    "\n",
+    "**UPDATE THIS LINK**\n",
+    "https://github.com/aakriti-poudel-chhetri/eds220-hwk4\n",
+    "\n",
+    "- Review the [complete rubric for this task](https://docs.google.com/document/d/1-Zm731BLVCs1MXHT5R1H9rr6uvcwHnMZQ2q8xkQ_fWM/edit?tab=t.0) before starting.\n",
+    "\n",
+    "- **Meaningful commits should be made every time you finish a major step.** \n",
+    "\n",
+    "- Comment mindfully in a way that enriches your code. Comments should follow best practices.\n",
+    "\n",
+    "## About the data\n",
+    "In this task, we will wor with two datasets:\n",
+    "\n",
+    "### First dataset: Simplified collection of bands from the Landsat Collection 2 Level-2\n",
+    "\n",
+    "The first contains a simplified collection of bands (red, green, blue, near-infrared and shortwave infrared) from the Landsat Collection 2 Level-2 atmosperically corrected surface reflectance data, collected by the Landsat 8 satellite.\n",
+    "\n",
+    "The data was retrieved from the [Microsof Planetary Computer data catalogue](https://planetarycomputer.microsoft.com/dataset/landsat-c2-l2) and clipped to an area surrounding the fire perimeters.\n",
+    "\n",
+    "### Second dataset: Fire perimeters for the Eaton and Palisades fires\n",
+    "\n",
+    "The second dataset is of fire perimeters for the Eaton and Palisades fires, and is retrieved from the [County of Los Angeles Open Data](https://data.lacounty.gov/). The data can be accessed from the [link](https://data.lacounty.gov/maps/ad51845ea5fb4eb483bc2a7c38b2370c/about)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6159d289-4fd4-45da-899a-0b5d95597c26",
+   "metadata": {},
+   "source": [
+    "## 1. File management\n",
+    "\n",
+    "a. Create a `data/` directory inside the `eds220-hwk4` directory. Any data downloaded were transferred into this folder. \n",
+    "\n",
+    "b. Add the `data/` directory to `.gitignore` file and push the changes. This is IMPORTANT: the datasets we'll be working with are large and they will most likely jam our commit history if we try to push them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c08ab36-bb2c-463f-ac18-213312297851",
+   "metadata": {},
+   "source": [
+    "## 2. Datasets description\n",
+    "- Read the metadata for both datsets and write a brief description about each one. Indicate the date sources and date of access."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "741b3232-2789-4024-bf58-d0a63ebb40de",
+   "metadata": {},
+   "source": [
+    "## 3. Import libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9865e30d-d1f8-4785-9244-7728a278c15e",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import geopandas as gpd"
+   ]
   }
  ],
  "metadata": {
