--- a/hwk4-task2-false-color-POUDEL.ipynb
+++ b/hwk4-task2-false-color-POUDEL.ipynb
@@ -448,7 +448,19 @@
      "output_type": "stream",
      "text": [
       "✅ Data imported successfully!\n",
-      "❌ An error occurred during import: name 'landsat_data' is not defined\n"
+      "<xarray.Dataset> Size: 78MB\n",
+      "Dimensions:      (y: 1418, x: 2742)\n",
+      "Coordinates:\n",
+      "  * y            (y) float64 11kB 3.799e+06 3.799e+06 ... 3.757e+06 3.757e+06\n",
+      "  * x            (x) float64 22kB 3.344e+05 3.344e+05 ... 4.166e+05 4.166e+05\n",
+      "    time         datetime64[ns] 8B ...\n",
+      "Data variables:\n",
+      "    red          (y, x) float32 16MB ...\n",
+      "    green        (y, x) float32 16MB ...\n",
+      "    blue         (y, x) float32 16MB ...\n",
+      "    nir08        (y, x) float32 16MB ...\n",
+      "    swir22       (y, x) float32 16MB ...\n",
+      "    spatial_ref  int64 8B ...\n"
      ]
     }
    ],
@@ -460,7 +472,7 @@
     "try:\n",
     "    landsat = xr.open_dataset(fp)\n",
     "    print(\"✅ Data imported successfully!\")\n",
-    "    print(landsat_data)\n",
+    "    print(landsat)\n",
     "\n",
     "except FileNotFoundError:\n",
     "    print(f\"❌ Error: File '{file_name}' not found. Check the file path.\")\n",
@@ -642,7 +654,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2377205e50>"
+       "<matplotlib.image.AxesImage at 0x7f72fcc6f050>"
       ]
      },
      "execution_count": 12,
@@ -684,7 +696,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f23770697d0>"
+       "<matplotlib.image.AxesImage at 0x7f72fb76bfd0>"
       ]
      },
      "execution_count": 13,
@@ -767,7 +779,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f237707a610>"
+       "<matplotlib.image.AxesImage at 0x7f72fb7dd550>"
       ]
      },
      "execution_count": 16,
@@ -923,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "9f0445b1-2495-48df-b5b9-a698789a4400",
    "metadata": {
     "tags": []
