Add and check markdown

--- a/hwk4-task2-false-color-POUDEL.ipynb
+++ b/hwk4-task2-false-color-POUDEL.ipynb
@@ -17,7 +17,7 @@
    "id": "fa8779cf-8d19-4ab9-8704-9ec0e455cdc5",
    "metadata": {},
    "source": [
-    "## About this notebook"
+    "## 1. About this notebook"
    ]
   },
   {
@@ -36,11 +36,12 @@
    "metadata": {},
    "source": [
     "### Highlights\n",
+    "The key highlights of this assignment is to:\n",
     "\n",
     "- Explore NetCDF data, xarray and restore geospatial information\n",
-    "- Create a True color image\n",
-    "- Create a False color image\n",
-    "- Create a False color image for monitoring the Eaton and Palisades fire"
+    "- Map a True color image\n",
+    "- Map a False color image\n",
+    "- Map the Eaton and Palisades fire boundaries using false-color satellite imagery"
    ]
   },
   {
@@ -94,7 +95,7 @@
    "source": [
     "## 2. Fire perimeter data exploration\n",
     "\n",
-    "Explore the fire perimeter data and write a brief summary of the information you obtained from the preliminary exploration. Your summary should include, at least, the CRS of the data and whether this is projected or geographic."
+    "Explore the fire perimeter data and write a brief summary of the information you obtained from the preliminary exploration."
    ]
   },
   {
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "9865e30d-d1f8-4785-9244-7728a278c15e",
    "metadata": {
     "tags": []
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "3de859f2-4137-4767-884a-a5d415b4ad12",
    "metadata": {
     "tags": []
@@ -242,7 +243,7 @@
        "4  POLYGON ((-13153131.126 4053196.882, -13153131...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,12 +262,12 @@
    "id": "5cf6f763-df02-4b3b-935b-f6949453be91",
    "metadata": {},
    "source": [
-    "Explore the `eaton` dataset."
+    "Explore the Eaton fire dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "56b4e32d-e8ff-416d-a0cc-bf22349c94cc",
    "metadata": {
     "tags": []
@@ -310,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "4216186f-8d0c-4150-b7b6-c5f49d0d54ca",
    "metadata": {
     "tags": []
@@ -405,7 +406,7 @@
        "4  POLYGON ((-13194209.580 4033236.320, -13194209...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,12 +427,12 @@
     "tags": []
    },
    "source": [
-    "Explore the `palisades` dataset."
+    "Explore the Palisades fire dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "9c65bff6-7e3c-4597-b4d7-44013a9b5c72",
    "metadata": {
     "tags": []
@@ -497,12 +498,12 @@
    "id": "9e463d6e-75ad-4a56-a776-c4e5d441cf48",
    "metadata": {},
    "source": [
-    "Read the NetCDF data."
+    "Read the NetCDF dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "1a27874b-6428-4044-9f90-cedbb123f5f9",
    "metadata": {
     "tags": []
@@ -582,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "37a97117-3afe-4307-9ca7-36e5aec6e75d",
    "metadata": {
     "tags": []
@@ -603,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "290d4b20-f524-4a3e-a148-3176632ce241",
    "metadata": {},
    "outputs": [
@@ -632,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "88293481-0dca-4adc-8c2d-a82812dbd88c",
    "metadata": {
     "tags": []
@@ -661,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "23853225-be86-4d25-a84a-86a066d7f5a9",
    "metadata": {
     "tags": []
@@ -702,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "b163ba8a-b40a-4655-a2c0-269df5f07e0d",
    "metadata": {
     "tags": []
@@ -727,6 +728,9 @@
    "metadata": {},
    "source": [
     "## 5. True color image\n",
+    "\n",
+    "To create a True color image, follow the followin steps:\n",
+    "\n",
     "a. Without creating any new variables:\n",
     "- select the red, green, and blue variables (in that order) of the `xarray.Dataset` holding the Landsat data,\n",
     "- convert it to a `numpy.array` using the `to_array()` method, and then\n",
@@ -735,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "id": "7ee6c33d-cf62-4805-b9a0-21bea1f166fa",
    "metadata": {
     "tags": []
@@ -751,10 +755,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f110989f810>"
+       "<matplotlib.image.AxesImage at 0x7fe31d30e910>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -783,8 +787,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9cf42154-7b05-4d77-98ae-867195a4aa34",
+   "metadata": {},
+   "source": [
+    "b. Adjust the scale used for plotting the bands to get a true color image. HINT: Check the robust parameter. *The issue here is the clouds: their RGB values are outliers and cause the other values to be squished when plotting.*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "5195d058-50b5-4d1c-a6f4-e1a6178404ad",
    "metadata": {
     "tags": []
@@ -793,10 +805,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f1109515290>"
+       "<matplotlib.image.AxesImage at 0x7fe15bb3e9d0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -820,13 +832,21 @@
     }
    ],
    "source": [
-    "# Adjust the scale used for plotting the bands to get a true color image\n",
+    "# Adjust the scale used for plotting the bands\n",
     "landsat[['red', 'green', 'blue']].to_array().plot.imshow(robust = True)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ecbad371-2efb-4af2-b3ab-649bfeb8a529",
+   "metadata": {},
+   "source": [
+    "c. To resolve the other warning, identify which bands have `nan` values. HINT: There are many ways of doing so. One option is to use `numpy.isnan()`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "b6e70de5-f5e2-4721-b8cb-463957e305e9",
    "metadata": {
     "tags": []
@@ -843,7 +863,7 @@
     }
    ],
    "source": [
-    "# Identify Nan values in bands\n",
+    "# Identify 'nan' values in bands\n",
     "for i in ['red', 'green', 'blue']:\n",
     "    # .isnull() creates a boolean array (True where NaN)\n",
     "    # .sum() sums the True values (counts the NaNs)\n",
@@ -853,21 +873,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13574655-2788-4b1e-9e07-8670f7a7be1b",
+   "metadata": {},
+   "source": [
+    "d. Use the `.fillna()` mehtod for `xarray.Datasets` to substitute the any `nan` values in the Landsat data for zero."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "ff7281f7-5493-4b6c-b0ac-6dc1b5488cbb",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Substitute any Nan values in the Landsat data for zero\n",
+    "# Substitute any 'nan' values in the Landsat data for zero\n",
     "landsat = landsat.fillna(0)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ff3c86b-3c96-4755-ac74-af3d45ada228",
+   "metadata": {},
+   "source": [
+    "e. Create a new true color image that gets plotted without warnings."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "e310e00b-e806-47c3-9856-9c6ccdc75263",
    "metadata": {
     "tags": []
@@ -876,10 +912,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f1108ab76d0>"
+       "<matplotlib.image.AxesImage at 0x7fe15bbb03d0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -895,7 +931,7 @@
     }
    ],
    "source": [
-    "# Create a new true color image that gets plotted without warnings\n",
+    "# Create a new true color image without warnings\n",
     "landsat[['red', 'green', 'blue']].to_array().plot.imshow(robust = True)"
    ]
   },
@@ -922,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "2044674d-5448-4723-9246-1f650419a0fc",
    "metadata": {
     "tags": []
@@ -943,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "c8b9dfe3-d94e-4cf5-b541-0fba4251f989",
    "metadata": {
     "tags": []
@@ -973,14 +1009,12 @@
    "metadata": {},
    "source": [
     "## 7. Map\n",
-    "a. Create a map showing the shortwave infrared/near-infrared/red false color image together with both fire perimeters. Customize it appropriately including, at least, an informative title and legend. You may also want to include text on the map to identify which fire is which.\n",
-    "\n",
-    "b. Write a figure description for the map including a brief explanation of how false color imagery is being used."
+    "a. Create a map showing the shortwave infrared/near-infrared/red false color image together with both fire perimeters. Customize it appropriately including, at least, an informative title and legend. You may also want to include text on the map to identify which fire is which."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "id": "505e5b00-fdaf-49fc-a402-edbf21427be6",
    "metadata": {
     "tags": []
@@ -995,8 +1029,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "08da4bf7-2595-479c-9de5-23889b52a116",
+   "metadata": {},
+   "source": [
+    "Check and ensure that the CRS is same before plotting."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
+   "id": "e58bd12b-97d6-4e91-980d-84cca9e12f02",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Projected CRS: EPSG:32611>\n",
+       "Name: WGS 84 / UTM zone 11N\n",
+       "Axis Info [cartesian]:\n",
+       "- E[east]: Easting (metre)\n",
+       "- N[north]: Northing (metre)\n",
+       "Area of Use:\n",
+       "- name: Between 120°W and 114°W, northern hemisphere between equator and 84°N, onshore and offshore. Canada - Alberta; British Columbia (BC); Northwest Territories (NWT); Nunavut. Mexico. United States (USA).\n",
+       "- bounds: (-120.0, 0.0, -114.0, 84.0)\n",
+       "Coordinate Operation:\n",
+       "- name: UTM zone 11N\n",
+       "- method: Transverse Mercator\n",
+       "Datum: World Geodetic System 1984 ensemble\n",
+       "- Ellipsoid: WGS 84\n",
+       "- Prime Meridian: Greenwich"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check The CRS of the combined dataset\n",
+    "fires.crs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "decd9ae7-559f-4bf2-9ac7-dc1b97a77fb7",
    "metadata": {
     "tags": []
@@ -1451,54 +1530,19 @@
        "40  POLYGON ((359042.608 3777508.172, 359065.353 3...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Check the fires dataset for plotting\n",
     "fires"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "ab8b8dcf-5bfa-408d-b7f8-7befea4f3f04",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Projected CRS: EPSG:32611>\n",
-       "Name: WGS 84 / UTM zone 11N\n",
-       "Axis Info [cartesian]:\n",
-       "- E[east]: Easting (metre)\n",
-       "- N[north]: Northing (metre)\n",
-       "Area of Use:\n",
-       "- name: Between 120°W and 114°W, northern hemisphere between equator and 84°N, onshore and offshore. Canada - Alberta; British Columbia (BC); Northwest Territories (NWT); Nunavut. Mexico. United States (USA).\n",
-       "- bounds: (-120.0, 0.0, -114.0, 84.0)\n",
-       "Coordinate Operation:\n",
-       "- name: UTM zone 11N\n",
-       "- method: Transverse Mercator\n",
-       "Datum: World Geodetic System 1984 ensemble\n",
-       "- Ellipsoid: WGS 84\n",
-       "- Prime Meridian: Greenwich"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fires.crs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "id": "9f0445b1-2495-48df-b5b9-a698789a4400",
    "metadata": {
     "tags": []
@@ -1554,6 +1598,14 @@
     "ax.add_artist(ScaleBar(1, box_color=\"white\",location=\"lower left\"))\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd27dcde-4a1b-4052-a1a9-70de75776389",
+   "metadata": {},
+   "source": [
+    "b. Write a figure description for the map including a brief explanation of how false color imagery is being used."
    ]
   },
   {
