--- a/hwk4-task2-false-color-POUDEL.ipynb
+++ b/hwk4-task2-false-color-POUDEL.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "3de859f2-4137-4767-884a-a5d415b4ad12",
    "metadata": {
     "tags": []
@@ -243,7 +243,7 @@
        "4  POLYGON ((-13153131.126 4053196.882, -13153131...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "56b4e32d-e8ff-416d-a0cc-bf22349c94cc",
    "metadata": {
     "tags": []
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "4216186f-8d0c-4150-b7b6-c5f49d0d54ca",
    "metadata": {
     "tags": []
@@ -406,7 +406,7 @@
        "4  POLYGON ((-13194209.580 4033236.320, -13194209...  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "9c65bff6-7e3c-4597-b4d7-44013a9b5c72",
    "metadata": {
     "tags": []
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "1a27874b-6428-4044-9f90-cedbb123f5f9",
    "metadata": {
     "tags": []
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "37a97117-3afe-4307-9ca7-36e5aec6e75d",
    "metadata": {
     "tags": []
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "290d4b20-f524-4a3e-a148-3176632ce241",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "88293481-0dca-4adc-8c2d-a82812dbd88c",
    "metadata": {
     "tags": []
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "23853225-be86-4d25-a84a-86a066d7f5a9",
    "metadata": {
     "tags": []
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "b163ba8a-b40a-4655-a2c0-269df5f07e0d",
    "metadata": {
     "tags": []
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "7ee6c33d-cf62-4805-b9a0-21bea1f166fa",
    "metadata": {
     "tags": []
@@ -755,10 +755,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fda7abcd510>"
+       "<matplotlib.image.AxesImage at 0x7f034e68b710>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "5195d058-50b5-4d1c-a6f4-e1a6178404ad",
    "metadata": {
     "tags": []
@@ -805,10 +805,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fda7aa6aed0>"
+       "<matplotlib.image.AxesImage at 0x7f034dc15550>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "b6e70de5-f5e2-4721-b8cb-463957e305e9",
    "metadata": {
     "tags": []
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "ff7281f7-5493-4b6c-b0ac-6dc1b5488cbb",
    "metadata": {
     "tags": []
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "e310e00b-e806-47c3-9856-9c6ccdc75263",
    "metadata": {
     "tags": []
@@ -912,10 +912,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fda7aafa2d0>"
+       "<matplotlib.image.AxesImage at 0x7f034dc7c550>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "2044674d-5448-4723-9246-1f650419a0fc",
    "metadata": {
     "tags": []
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "c8b9dfe3-d94e-4cf5-b541-0fba4251f989",
    "metadata": {
     "tags": []
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "505e5b00-fdaf-49fc-a402-edbf21427be6",
    "metadata": {
     "tags": []
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "e58bd12b-97d6-4e91-980d-84cca9e12f02",
    "metadata": {
     "tags": []
@@ -1063,7 +1063,7 @@
        "- Prime Meridian: Greenwich"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "decd9ae7-559f-4bf2-9ac7-dc1b97a77fb7",
    "metadata": {
     "tags": []
@@ -1538,7 +1538,7 @@
        "40  POLYGON ((359042.608 3777508.172, 359065.353 3...  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "9f0445b1-2495-48df-b5b9-a698789a4400",
    "metadata": {
     "tags": []
